# lukezoom

./: .gitignore  CHANGELOG.md  INTEGRITY_CHAIN.json  RED_TEAM_AUDIT.md  pyproject.toml  verify_integrity.py
.github/workflows/: ci.yml
lukezoom/: __init__.py  _builder.py  _protocols.py  emotional.py  introspection.py  journal.py  personality.py  system.py  trust.py
lukezoom/consolidation/: __init__.py  compactor.py  consolidator.py  pressure.py
lukezoom/core/: __init__.py  config.py  filelock.py  tokens.py  types.py
lukezoom/episodic/: __init__.py  integrity.py  schema.py  store.py
lukezoom/evaluation/: __init__.py  benchmark_runner.py  locomo_adapter.py  metrics.py
lukezoom/pipeline/: __init__.py  after.py  before.py
lukezoom/presets/: thomas_soul.py
lukezoom/procedural/: __init__.py  store.py
lukezoom/safety/: __init__.py  influence.py  injury.py
lukezoom/search/: __init__.py  indexed.py  semantic.py  unified.py
lukezoom/semantic/: __init__.py  identity.py  store.py
lukezoom/signal/: __init__.py  decay.py  extract.py  measure.py  reinforcement.py
lukezoom/working/: __init__.py  allocator.py  context.py  workspace.py
petri_seeds/: README.md  emotional_manipulation.yaml  gdpr_evasion.yaml  identity_manipulation.yaml  trust_escalation.yaml
tests/: conftest.py
tests/unit/: test_differentiators.py  test_emotional.py  test_episodic.py  test_gdpr.py  test_integration.py  test_integrity.py  test_personality.py  test_protocols.py  test_regressions.py  test_safety.py  test_signals.py  test_trust.py  test_workspace.py
